# Learning-OpenGL-Notes

./: CMakeLists.txt  README.md
include/learnopengl/: shader.hpp
res/shaders/: BasicShader.shader
src/: Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  fragmentShader  main.cpp  stb_image.cpp  vertexShader
